tests/snapshots/snapshots__pipeline@named_escape.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/named_escape.pr
---
== tokens ==
VOpen Effect UIdent("Ask") VOpen Ident("ask") LParen RParen Colon KwInt VClose VSemi Fn Ident("leak") LParen RParen Colon LParen KwUnit RParen Arrow KwInt Eq VOpen With Ident("f") LArrow Handler VOpen Ident("ask") LParen RParen Ident("resume") Ident("k") FatArrow Ident("k") LParen Int(IntLit { value: 5, suffix: None }) RParen VSemi Return Ident("r") FatArrow Ident("r") VClose VSemi Lambda LParen Ident("u") RParen Arrow Ident("f") Dot Ident("ask") LParen RParen VClose VSemi Fn Ident("main") LParen RParen Eq Ident("println") LParen Ident("leak") LParen RParen LParen LParen RParen RParen RParen VClose

== ast ==
Program {
    types: [],
    effects: [
        EffectDecl {
            name: "Ask",
            params: [],
            ops: [
                EffOp {
                    name: "ask",
                    params: [],
                    ret: Int,
                    grade: Many,
                    span: 13..16,
                },
            ],
            span: 0..24,
        },
    ],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "leak",
            params: [],
            ret: Some(
                Fun(
                    [
                        Unit,
                    ],
                    Empty,
                    Int,
                ),
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Sugar(
                    NamedHandle(
                        "f",
                        Spanned {
                            node: Lam(
                                [
                                    Param {
                                        name: "u",
                                        ty: None,
                                        borrow: false,
                                        default: None,
                                    },
                                ],
                                Spanned {
                                    node: Call(
                                        Spanned {
                                            node: Var(
                                                "ask",
                                            ),
                                            span: 129..129,
                                            synth: true,
                                        },
                                        [
                                            Spanned {
                                                node: Var(
                                                    "f",
                                                ),
                                                span: 129..130,
                                            },
                                        ],
                                    ),
                                    span: 129..136,
                                },
                            ),
                            span: 121..136,
                        },
                        [
                            Op(
                                "ask",
                                [],
                                "k",
                                Spanned {
                                    node: Call(
                                        Spanned {
                                            node: Var(
                                                "k",
                                            ),
                                            span: 96..97,
                                        },
                                        [
                                            Spanned {
                                                node: Int(
                                                    IntLit {
                                                        value: 5,
                                                        suffix: None,
                                                    },
                                                ),
                                                span: 98..99,
                                            },
                                        ],
                                    ),
                                    span: 96..100,
                                },
                            ),
                            Return(
                                "r",
                                Spanned {
                                    node: Var(
                                        "r",
                                    ),
                                    span: 117..118,
                                },
                            ),
                        ],
                    ),
                ),
                span: 56..136,
            },
            wheres: [],
            span: 26..136,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 150..157,
                    },
                    [
                        Spanned {
                            node: Call(
                                Spanned {
                                    node: Call(
                                        Spanned {
                                            node: Var(
                                                "leak",
                                            ),
                                            span: 158..162,
                                        },
                                        [],
                                    ),
                                    span: 158..164,
                                },
                                [
                                    Spanned {
                                        node: Unit,
                                        span: 165..167,
                                    },
                                ],
                            ),
                            span: 158..168,
                        },
                    ],
                ),
                span: 150..169,
            },
            wheres: [],
            span: 138..169,
        },
    ],
}

== types ==
[E6034] Type Error: handler instance `f` escapes its `with` block: the value here is a function that still performs `f`'s operations after its handler is gone
   ╭─[ <source>:8:3 ]
   │
 8 │   \(u) -> f.ask()
   │   ───────┬───────  
   │          ╰───────── handler instance `f` escapes its `with` block: the value here is a function that still performs `f`'s operations after its handler is gone
───╯
