tests/snapshots/snapshots__pipeline@named_escape_ctor.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/named_escape_ctor.pr
---
== tokens ==
VOpen Effect UIdent("Ask") VOpen Ident("ask") LParen RParen Colon KwInt VClose VSemi Fn Ident("leak") LParen RParen Colon LParen KwUnit Comma LParen KwUnit RParen Arrow KwInt RParen Eq VOpen With Ident("f") LArrow Handler VOpen Ident("ask") LParen RParen Ident("resume") Ident("k") FatArrow Ident("k") LParen Int(IntLit { value: 5, suffix: None }) RParen VSemi Return Ident("r") FatArrow Ident("r") VClose VSemi LParen LParen RParen Comma Lambda LParen Ident("u") RParen Arrow Ident("f") Dot Ident("ask") LParen RParen RParen VClose VSemi Fn Ident("main") LParen RParen Eq Ident("println") LParen Int(IntLit { value: 0, suffix: None }) RParen VClose

== ast ==
Program {
    types: [],
    effects: [
        EffectDecl {
            name: "Ask",
            params: [],
            ops: [
                EffOp {
                    name: "ask",
                    params: [],
                    ret: Int,
                    grade: Many,
                    span: 168..171,
                },
            ],
            span: 155..179,
        },
    ],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "leak",
            params: [],
            ret: Some(
                Tuple(
                    [
                        Unit,
                        Fun(
                            [
                                Unit,
                            ],
                            Empty,
                            Int,
                        ),
                    ],
                ),
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Sugar(
                    NamedHandle(
                        "f",
                        Spanned {
                            node: Tuple(
                                [
                                    Spanned {
                                        node: Unit,
                                        span: 285..287,
                                    },
                                    Spanned {
                                        node: Lam(
                                            [
                                                Param {
                                                    name: "u",
                                                    ty: None,
                                                    borrow: false,
                                                    default: None,
                                                },
                                            ],
                                            Spanned {
                                                node: Call(
                                                    Spanned {
                                                        node: Var(
                                                            "ask",
                                                        ),
                                                        span: 297..297,
                                                        synth: true,
                                                    },
                                                    [
                                                        Spanned {
                                                            node: Var(
                                                                "f",
                                                            ),
                                                            span: 297..298,
                                                        },
                                                    ],
                                                ),
                                                span: 297..304,
                                            },
                                        ),
                                        span: 289..304,
                                    },
                                ],
                            ),
                            span: 284..305,
                        },
                        [
                            Op(
                                "ask",
                                [],
                                "k",
                                Spanned {
                                    node: Call(
                                        Spanned {
                                            node: Var(
                                                "k",
                                            ),
                                            span: 259..260,
                                        },
                                        [
                                            Spanned {
                                                node: Int(
                                                    IntLit {
                                                        value: 5,
                                                        suffix: None,
                                                    },
                                                ),
                                                span: 261..262,
                                            },
                                        ],
                                    ),
                                    span: 259..263,
                                },
                            ),
                            Return(
                                "r",
                                Spanned {
                                    node: Var(
                                        "r",
                                    ),
                                    span: 280..281,
                                },
                            ),
                        ],
                    ),
                ),
                span: 219..305,
            },
            wheres: [],
            span: 181..305,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 319..326,
                    },
                    [
                        Spanned {
                            node: Int(
                                IntLit {
                                    value: 0,
                                    suffix: None,
                                },
                            ),
                            span: 327..328,
                        },
                    ],
                ),
                span: 319..329,
            },
            wheres: [],
            span: 307..329,
        },
    ],
}

== types ==
[E6034] Type Error: handler instance `f` escapes its `with` block: the value here is a function that still performs `f`'s operations after its handler is gone
    ╭─[ <source>:10:8 ]
    │
 10 │   ((), \(u) -> f.ask())
    │        ───────┬───────  
    │               ╰───────── handler instance `f` escapes its `with` block: the value here is a function that still performs `f`'s operations after its handler is gone
────╯
