tests/snapshots/snapshots__pipeline@named_escape_payload.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/named_escape_payload.pr
---
== tokens ==
VOpen Effect UIdent("Ask") VOpen Ident("ask") LParen RParen Colon KwInt VClose VSemi Effect UIdent("Store") VOpen Ident("save") LParen LParen KwUnit RParen Arrow KwInt RParen Colon KwUnit VClose VSemi Fn Ident("leak") LParen RParen Eq VOpen With Ident("f") LArrow Handler VOpen Ident("ask") LParen RParen Ident("resume") Ident("k") FatArrow Ident("k") LParen Int(IntLit { value: 5, suffix: None }) RParen VSemi Return Ident("r") FatArrow Ident("r") VClose VSemi Ident("save") LParen Lambda LParen Ident("u") RParen Arrow Ident("f") Dot Ident("ask") LParen RParen RParen VClose VSemi Fn Ident("main") LParen RParen Eq Ident("leak") LParen RParen VClose

== ast ==
Program {
    types: [],
    effects: [
        EffectDecl {
            name: "Ask",
            params: [],
            ops: [
                EffOp {
                    name: "ask",
                    params: [],
                    ret: Int,
                    grade: Many,
                    span: 322..325,
                },
            ],
            span: 309..333,
        },
        EffectDecl {
            name: "Store",
            params: [],
            ops: [
                EffOp {
                    name: "save",
                    params: [
                        Fun(
                            [
                                Unit,
                            ],
                            Empty,
                            Int,
                        ),
                    ],
                    ret: Unit,
                    grade: Many,
                    span: 350..354,
                },
            ],
            span: 335..376,
        },
    ],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "leak",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Sugar(
                    NamedHandle(
                        "f",
                        Spanned {
                            node: Call(
                                Spanned {
                                    node: Var(
                                        "save",
                                    ),
                                    span: 457..461,
                                },
                                [
                                    Spanned {
                                        node: Lam(
                                            [
                                                Param {
                                                    name: "u",
                                                    ty: None,
                                                    borrow: false,
                                                    default: None,
                                                },
                                            ],
                                            Spanned {
                                                node: Call(
                                                    Spanned {
                                                        node: Var(
                                                            "ask",
                                                        ),
                                                        span: 470..470,
                                                        synth: true,
                                                    },
                                                    [
                                                        Spanned {
                                                            node: Var(
                                                                "f",
                                                            ),
                                                            span: 470..471,
                                                        },
                                                    ],
                                                ),
                                                span: 470..477,
                                            },
                                        ),
                                        span: 462..477,
                                    },
                                ],
                            ),
                            span: 457..478,
                        },
                        [
                            Op(
                                "ask",
                                [],
                                "k",
                                Spanned {
                                    node: Call(
                                        Spanned {
                                            node: Var(
                                                "k",
                                            ),
                                            span: 432..433,
                                        },
                                        [
                                            Spanned {
                                                node: Int(
                                                    IntLit {
                                                        value: 5,
                                                        suffix: None,
                                                    },
                                                ),
                                                span: 434..435,
                                            },
                                        ],
                                    ),
                                    span: 432..436,
                                },
                            ),
                            Return(
                                "r",
                                Spanned {
                                    node: Var(
                                        "r",
                                    ),
                                    span: 453..454,
                                },
                            ),
                        ],
                    ),
                ),
                span: 392..478,
            },
            wheres: [],
            span: 378..478,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "leak",
                        ),
                        span: 492..496,
                    },
                    [],
                ),
                span: 492..498,
            },
            wheres: [],
            span: 480..498,
        },
    ],
}

== types ==
[E1998] Type Error: in `leak`: handler instance `f` escapes its scope: a value here still performs `f`'s `Ask` operation after its handler is gone
    ╭─[ <source>:15:8 ]
    │
 15 │   save(\(u) -> f.ask())
    │        ───────┬───────  
    │               ╰───────── in `leak`: handler instance `f` escapes its scope: a value here still performs `f`'s `Ask` operation after its handler is gone
────╯
