tests/snapshots/snapshots__pipeline@newtype.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/newtype.pr
---
== tokens ==
VOpen Newtype UIdent("UserId") Eq UIdent("UserId") LParen KwInt RParen Deriving LParen UIdent("Show") Comma UIdent("Eq") RParen VSemi Newtype UIdent("Wrap") LParen Ident("a") RParen Eq UIdent("Wrap") LParen Ident("a") RParen VSemi Fn Ident("unwrap") LParen Ident("w") Colon UIdent("Wrap") LParen KwInt RParen RParen Colon KwInt Eq VOpen Match Ident("w") Of VOpen UIdent("Wrap") LParen Ident("x") RParen FatArrow Ident("x") VClose VClose VSemi Fn Ident("main") LParen RParen Eq VOpen Let Ident("u") Eq UIdent("UserId") LParen Int(IntLit { value: 7, suffix: None }) RParen VSemi Ident("print") LParen Ident("u") EqEq UIdent("UserId") LParen Int(IntLit { value: 7, suffix: None }) RParen RParen VSemi Ident("print") LParen Ident("unwrap") LParen UIdent("Wrap") LParen Ident("unwrap") LParen UIdent("Wrap") LParen Int(IntLit { value: 5, suffix: None }) RParen RParen RParen RParen RParen VClose VClose

== ast ==
Program {
    types: [
        DataDecl {
            name: "UserId",
            params: [],
            param_kinds: [],
            ctors: [
                Ctor {
                    name: "UserId",
                    args: [
                        Int,
                    ],
                    fields: None,
                    span: 17..23,
                },
            ],
            deriving: [
                (
                    "Show",
                    39..43,
                ),
                (
                    "Eq",
                    45..47,
                ),
            ],
            newtype: true,
            span: 0..48,
        },
        DataDecl {
            name: "Wrap",
            params: [
                "a",
            ],
            param_kinds: [],
            ctors: [
                Ctor {
                    name: "Wrap",
                    args: [
                        Var(
                            "a",
                        ),
                    ],
                    fields: None,
                    span: 68..72,
                },
            ],
            deriving: [],
            newtype: true,
            span: 50..75,
        },
    ],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "unwrap",
            params: [
                Param {
                    name: "w",
                    ty: Some(
                        Con(
                            "Wrap",
                            [
                                Int,
                            ],
                        ),
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Match(
                    Spanned {
                        node: Var(
                            "w",
                        ),
                        span: 118..119,
                    },
                    [
                        Arm {
                            pat: Spanned {
                                node: Ctor(
                                    "Wrap",
                                    [
                                        Spanned {
                                            node: Var(
                                                "x",
                                            ),
                                            span: 132..133,
                                        },
                                    ],
                                ),
                                span: 127..134,
                            },
                            body: Spanned {
                                node: Var(
                                    "x",
                                ),
                                span: 138..139,
                            },
                        },
                    ],
                ),
                span: 112..139,
            },
            wheres: [],
            span: 77..139,
        },
        Decl {
            name: "main",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Let(
                    "u",
                    Spanned {
                        node: Call(
                            Spanned {
                                node: Var(
                                    "UserId",
                                ),
                                span: 163..169,
                            },
                            [
                                Spanned {
                                    node: Int(
                                        IntLit {
                                            value: 7,
                                            suffix: None,
                                        },
                                    ),
                                    span: 170..171,
                                },
                            ],
                        ),
                        span: 163..172,
                    },
                    Spanned {
                        node: Let(
                            "_",
                            Spanned {
                                node: Call(
                                    Spanned {
                                        node: Var(
                                            "print",
                                        ),
                                        span: 175..180,
                                    },
                                    [
                                        Spanned {
                                            node: Bin(
                                                Eq,
                                                Spanned {
                                                    node: Var(
                                                        "u",
                                                    ),
                                                    span: 181..182,
                                                },
                                                Spanned {
                                                    node: Call(
                                                        Spanned {
                                                            node: Var(
                                                                "UserId",
                                                            ),
                                                            span: 186..192,
                                                        },
                                                        [
                                                            Spanned {
                                                                node: Int(
                                                                    IntLit {
                                                                        value: 7,
                                                                        suffix: None,
                                                                    },
                                                                ),
                                                                span: 193..194,
                                                            },
                                                        ],
                                                    ),
                                                    span: 186..195,
                                                },
                                            ),
                                            span: 181..195,
                                        },
                                    ],
                                ),
                                span: 175..196,
                            },
                            Spanned {
                                node: Call(
                                    Spanned {
                                        node: Var(
                                            "print",
                                        ),
                                        span: 199..204,
                                    },
                                    [
                                        Spanned {
                                            node: Call(
                                                Spanned {
                                                    node: Var(
                                                        "unwrap",
                                                    ),
                                                    span: 205..211,
                                                },
                                                [
                                                    Spanned {
                                                        node: Call(
                                                            Spanned {
                                                                node: Var(
                                                                    "Wrap",
                                                                ),
                                                                span: 212..216,
                                                            },
                                                            [
                                                                Spanned {
                                                                    node: Call(
                                                                        Spanned {
                                                                            node: Var(
                                                                                "unwrap",
                                                                            ),
                                                                            span: 217..223,
                                                                        },
                                                                        [
                                                                            Spanned {
                                                                                node: Call(
                                                                                    Spanned {
                                                                                        node: Var(
                                                                                            "Wrap",
                                                                                        ),
                                                                                        span: 224..228,
                                                                                    },
                                                                                    [
                                                                                        Spanned {
                                                                                            node: Int(
                                                                                                IntLit {
                                                                                                    value: 5,
                                                                                                    suffix: None,
                                                                                                },
                                                                                            ),
                                                                                            span: 229..230,
                                                                                        },
                                                                                    ],
                                                                                ),
                                                                                span: 224..231,
                                                                            },
                                                                        ],
                                                                    ),
                                                                    span: 217..232,
                                                                },
                                                            ],
                                                        ),
                                                        span: 212..233,
                                                    },
                                                ],
                                            ),
                                            span: 205..234,
                                        },
                                    ],
                                ),
                                span: 199..235,
                            },
                        ),
                        span: 175..235,
                    },
                ),
                span: 155..235,
            },
            wheres: [],
            span: 141..235,
        },
    ],
}

== types ==
[E6017] Type Error: unknown class in deriving: Show
   ╭─[ <source>:1:40 ]
   │
 1 │ newtype UserId = UserId(Int) deriving (Show, Eq)
   │                                        ──┬─  
   │                                          ╰─── unknown class in deriving: Show
───╯
